force-app/main/default/objects/CommandEvent__e/CommandEvent__e.object-meta.xml
<CustomObject>
    <label>CommandEvent</label>
    <pluralLabel>CommandEvents</pluralLabel>
</CustomObject>