force-app/main/default/objects/CommandEvent__e/fields/config__c.field-meta.xml
<CustomField>
    <fullName>config__c</fullName>
    <description>The JSON config body of the event</description>
    <label>Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>