force-app/main/default/objects/CommandEvent__e/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <description>The name of the event</description>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>