force-app/main/default/objects/CommandEvent__e/fields/uid__c.field-meta.xml
<CustomField>
    <fullName>uid__c</fullName>
    <description>A unique identifier for the event for optional use by the recipient.</description>
    <label>UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>